--- a/MyNote/src/main/resources/templates/login.html
+++ b/MyNote/src/main/resources/templates/login.html
@@ -70,6 +70,7 @@
 		        method: "POST",
 		        headers: { "Content-Type": "application/x-www-form-urlencoded" },
 		        body: `account=${encodeURIComponent(account)}&password=${encodeURIComponent(password)}`,
+				credentials: "include"
 		    })
 		    .then(res => res.text())
 		    .then(result => {
